--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
 .RoomList li a:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
+.UserInfo a {
+  color: rgba(255, 255, 255, 0.6);
+}
 .UserInfo a:hover {
   color: white;
 }
