--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,15 @@ body {
 .RoomList a.active {
   background-color: rgba(255, 255, 255, 0.2);
 }
+
+.ChatHeader button {
+  opacity: 0;
+}
+
+.ChatHeader:hover button {
+  opacity: 1;
+  transition: opacity 1s ease-out;
+  -moz-transition: opacity 1s ease-out;
+  -webkit-transition: opacity 1s ease-out;
+  -o-transition: opacity 1s ease-out;
+}
